--- a/ApiTester/Resources/IBFiles/ApiViewController.xib
+++ b/ApiTester/Resources/IBFiles/ApiViewController.xib
@@ -50,7 +50,7 @@
 					<object class="IBUITableView" id="873029372">
 						<reference key="NSNextResponder" ref="725614111"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 44}, {320, 460}}</string>
+						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
 						<reference key="NSSuperview" ref="725614111"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="299959869"/>
@@ -91,6 +91,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
 						<bool key="IBUIBouncesZoom">NO</bool>
 						<int key="IBUIStyle">1</int>
 						<int key="IBUISeparatorStyle">2</int>
@@ -139,7 +140,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<object class="IBUIButton" id="952194190">
 								<reference key="NSNextResponder" ref="299959869"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{101, 7}, {109, 31}}</string>
+								<string key="NSFrame">{{101, 12}, {109, 21}}</string>
 								<reference key="NSSuperview" ref="299959869"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="298823503"/>
@@ -166,7 +167,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<object class="IBUIButton" id="298823503">
 								<reference key="NSNextResponder" ref="299959869"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{220, 7}, {88, 31}}</string>
+								<string key="NSFrame">{{220, 12}, {88, 21}}</string>
 								<reference key="NSSuperview" ref="299959869"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="246933426"/>
@@ -445,6 +446,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<bool key="EncodedWithXMLCoder">YES</bool>
 						</object>
 						<reference key="parent" ref="725614111"/>
+						<string key="objectName">Table View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
